--- a/javacc/src/main/resources/templates/TokenManager.template
+++ b/javacc/src/main/resources/templates/TokenManager.template
@@ -3,12 +3,12 @@
  * JavaCCParser.  The user is free to use any implementation
  * of their choice.
  */
-
 ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}interface TokenManager {
-
-  /** This gets the next token from the input stream.
-   *  A token of kind 0 (<EOF>) should be returned on EOF.
+  /**
+   * Gets the next token from the input stream.
+   * A token of kind 0 (&lt;EOF&gt;) should be returned on EOF.
+   *
+   * @return Next token from the input stream.
    */
-  public Token getNextToken();
-
+  Token getNextToken();
 }
