Fix for user defined char stream.
Regardles of USER_CHAR_STREAM option will
always generate CharStrean interface which will
be implemented by the generated SimpleCharStream
or JavaCharStream class.

--- a/javacc/src/main/resources/templates/JavaCharStream.template
+++ b/javacc/src/main/resources/templates/JavaCharStream.template
@@ -2,11 +2,7 @@
  * An implementation of interface CharStream, where the stream is assumed to
  * contain only ASCII characters (with java-like unicode escape processing).
  */
-
-#if SUPPORT_CLASS_VISIBILITY_PUBLIC
-public
-#fi
-class JavaCharStream
+${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class JavaCharStream implements CharStream
 {
   /** Whether parser is static. */
   public static final boolean staticFlag = ${STATIC};
