--- a/javacc/src/main/resources/templates/SimpleCharStream.template
+++ b/javacc/src/main/resources/templates/SimpleCharStream.template
@@ -2,8 +2,7 @@
  * An implementation of interface CharStream, where the stream is assumed to
  * contain only ASCII characters (without unicode processing).
  */
-
-${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream
+${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements CharStream
 {
 /** Whether parser is static. */
   public static final boolean staticFlag = ${STATIC};
