--- a/javacc/pom.xml
+++ b/javacc/pom.xml
@@ -19,6 +19,13 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>javacc-maven-plugin</artifactId>
         <version>2.6</version>
+        <dependencies>
+          <dependency>
+            <groupId>net.java.dev.javacc</groupId>
+            <artifactId>javacc</artifactId>
+            <version>5.1</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <id>javacc</id>
