--- a/javacc/src/main/resources/templates/SimpleCharStream.template
+++ b/javacc/src/main/resources/templates/SimpleCharStream.template
@@ -4,36 +4,34 @@
  */
 ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements CharStream
 {
-/** Whether parser is static. */
-  public static final boolean staticFlag = ${STATIC};
-  ${PREFIX}int bufsize;
-  ${PREFIX}int available;
-  ${PREFIX}int tokenBegin;
+  int bufsize;
+  int available;
+  int tokenBegin;
 /** Position in buffer. */
-  ${PREFIX}public int bufpos = -1;
+  public int bufpos = -1;
 #if KEEP_LINE_COLUMN
-  ${PREFIX}protected int bufline[];
-  ${PREFIX}protected int bufcolumn[];
+  protected int bufline[];
+  protected int bufcolumn[];
 
-  ${PREFIX}protected int column = 0;
-  ${PREFIX}protected int line = 1;
+  protected int column = 0;
+  protected int line = 1;
 
-  ${PREFIX}protected boolean prevCharIsCR = false;
-  ${PREFIX}protected boolean prevCharIsLF = false;
+  protected boolean prevCharIsCR = false;
+  protected boolean prevCharIsLF = false;
 #fi
 
-  ${PREFIX}protected java.io.Reader inputStream;
+  protected java.io.Reader inputStream;
 
-  ${PREFIX}protected char[] buffer;
-  ${PREFIX}protected int maxNextCharInd = 0;
-  ${PREFIX}protected int inBuf = 0;
-  ${PREFIX}protected int tabSize = 8;
+  protected char[] buffer;
+  protected int maxNextCharInd = 0;
+  protected int inBuf = 0;
+  protected int tabSize = 8;
 
-  ${PREFIX}protected void setTabSize(int i) { tabSize = i; }
-  ${PREFIX}protected int getTabSize(int i) { return tabSize; }
+  protected void setTabSize(int i) { tabSize = i; }
+  protected int getTabSize(int i) { return tabSize; }
 
 
-  ${PREFIX}protected void ExpandBuff(boolean wrapAround)
+  protected void ExpandBuff(boolean wrapAround)
   {
     char[] newbuffer = new char[bufsize + 2048];
 #if KEEP_LINE_COLUMN
@@ -88,7 +86,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
     tokenBegin = 0;
   }
 
-  ${PREFIX}protected void FillBuff() throws java.io.IOException
+  protected void FillBuff() throws java.io.IOException
   {
     if (maxNextCharInd == available)
     {
@@ -133,7 +131,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 
 /** Start. */
-  ${PREFIX}public char BeginToken() throws java.io.IOException
+  public char BeginToken() throws java.io.IOException
   {
     tokenBegin = -1;
     char c = readChar();
@@ -143,7 +141,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 #if KEEP_LINE_COLUMN
 
-  ${PREFIX}protected void UpdateLineColumn(char c)
+  protected void UpdateLineColumn(char c)
   {
     column++;
 
@@ -185,7 +183,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
 #fi
 
 /** Read a character. */
-  ${PREFIX}public char readChar() throws java.io.IOException
+  public char readChar() throws java.io.IOException
   {
     if (inBuf > 0)
     {
@@ -216,7 +214,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
    * @see #getEndColumn
    */
 
-  ${PREFIX}public int getColumn() {
+  public int getColumn() {
 #if KEEP_LINE_COLUMN
     return bufcolumn[bufpos];
 #else
@@ -232,7 +230,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
    * @see #getEndLine
    */
 
-  ${PREFIX}public int getLine() {
+  public int getLine() {
 #if KEEP_LINE_COLUMN
     return bufline[bufpos];
 #else
@@ -241,7 +239,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 
   /** Get token end column number. */
-  ${PREFIX}public int getEndColumn() {
+  public int getEndColumn() {
 #if KEEP_LINE_COLUMN
     return bufcolumn[bufpos];
 #else
@@ -250,7 +248,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 
   /** Get token end line number. */
-  ${PREFIX}public int getEndLine() {
+  public int getEndLine() {
 #if KEEP_LINE_COLUMN
      return bufline[bufpos];
 #else
@@ -259,7 +257,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 
   /** Get token beginning column number. */
-  ${PREFIX}public int getBeginColumn() {
+  public int getBeginColumn() {
 #if KEEP_LINE_COLUMN
     return bufcolumn[tokenBegin];
 #else
@@ -268,7 +266,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 
   /** Get token beginning line number. */
-  ${PREFIX}public int getBeginLine() {
+  public int getBeginLine() {
 #if KEEP_LINE_COLUMN
     return bufline[tokenBegin];
 #else
@@ -277,7 +275,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 
 /** Backup a number of characters. */
-  ${PREFIX}public void backup(int amount) {
+  public void backup(int amount) {
 
     inBuf += amount;
     if ((bufpos -= amount) < 0)
@@ -288,12 +286,6 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   public SimpleCharStream(java.io.Reader dstream, int startline,
   int startcolumn, int buffersize)
   {
-#if STATIC
-    if (inputStream != null)
-      throw new Error("\n   ERROR: Second call to the constructor of a static SimpleCharStream.\n" +
-      "       You must either use ReInit() or set the JavaCC option STATIC to false\n" +
-      "       during the generation of this class.");
-#fi
     inputStream = dstream;
 #if KEEP_LINE_COLUMN
     line = startline;
@@ -321,44 +313,6 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
     this(dstream, 1, 1, 4096);
   }
 
-  /** Reinitialise. */
-  public void ReInit(java.io.Reader dstream, int startline,
-  int startcolumn, int buffersize)
-  {
-    inputStream = dstream;
-#if KEEP_LINE_COLUMN
-    line = startline;
-    column = startcolumn - 1;
-#fi
-
-    if (buffer == null || buffersize != buffer.length)
-    {
-      available = bufsize = buffersize;
-      buffer = new char[buffersize];
-#if KEEP_LINE_COLUMN
-      bufline = new int[buffersize];
-      bufcolumn = new int[buffersize];
-#fi
-    }
-#if KEEP_LINE_COLUMN
-    prevCharIsLF = prevCharIsCR = false;
-#fi
-    tokenBegin = inBuf = maxNextCharInd = 0;
-    bufpos = -1;
-  }
-
-  /** Reinitialise. */
-  public void ReInit(java.io.Reader dstream, int startline,
-                     int startcolumn)
-  {
-    ReInit(dstream, startline, startcolumn, 4096);
-  }
-
-  /** Reinitialise. */
-  public void ReInit(java.io.Reader dstream)
-  {
-    ReInit(dstream, 1, 1, 4096);
-  }
   /** Constructor. */
   public SimpleCharStream(java.io.InputStream dstream, String encoding, int startline,
   int startcolumn, int buffersize) throws java.io.UnsupportedEncodingException
@@ -399,45 +353,8 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
     this(dstream, 1, 1, 4096);
   }
 
-  /** Reinitialise. */
-  public void ReInit(java.io.InputStream dstream, String encoding, int startline,
-                          int startcolumn, int buffersize) throws java.io.UnsupportedEncodingException
-  {
-    ReInit(encoding == null ? new java.io.InputStreamReader(dstream) : new java.io.InputStreamReader(dstream, encoding), startline, startcolumn, buffersize);
-  }
-
-  /** Reinitialise. */
-  public void ReInit(java.io.InputStream dstream, int startline,
-                          int startcolumn, int buffersize)
-  {
-    ReInit(new java.io.InputStreamReader(dstream), startline, startcolumn, buffersize);
-  }
-
-  /** Reinitialise. */
-  public void ReInit(java.io.InputStream dstream, String encoding) throws java.io.UnsupportedEncodingException
-  {
-    ReInit(dstream, encoding, 1, 1, 4096);
-  }
-
-  /** Reinitialise. */
-  public void ReInit(java.io.InputStream dstream)
-  {
-    ReInit(dstream, 1, 1, 4096);
-  }
-  /** Reinitialise. */
-  public void ReInit(java.io.InputStream dstream, String encoding, int startline,
-                     int startcolumn) throws java.io.UnsupportedEncodingException
-  {
-    ReInit(dstream, encoding, startline, startcolumn, 4096);
-  }
-  /** Reinitialise. */
-  public void ReInit(java.io.InputStream dstream, int startline,
-                     int startcolumn)
-  {
-    ReInit(dstream, startline, startcolumn, 4096);
-  }
   /** Get token literal value. */
-  ${PREFIX}public String GetImage()
+  public String GetImage()
   {
     if (bufpos >= tokenBegin)
       return new String(buffer, tokenBegin, bufpos - tokenBegin + 1);
@@ -447,7 +364,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 
   /** Get the suffix. */
-  ${PREFIX}public char[] GetSuffix(int len)
+  public char[] GetSuffix(int len)
   {
     char[] ret = new char[len];
 
@@ -464,7 +381,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   }
 
   /** Reset buffer when finished. */
-  ${PREFIX}public void Done()
+  public void Done()
   {
     buffer = null;
 #if KEEP_LINE_COLUMN
@@ -477,7 +394,7 @@ ${SUPPORT_CLASS_VISIBILITY_PUBLIC?public :}class SimpleCharStream implements Cha
   /**
    * Method to adjust line and column numbers for the start of a token.
    */
-  ${PREFIX}public void adjustBeginLineColumn(int newLine, int newCol)
+  public void adjustBeginLineColumn(int newLine, int newCol)
   {
     int start = tokenBegin;
     int len;
