Specified grammar encoding explicitly in pom.xml file.

--- a/javacc/pom.xml
+++ b/javacc/pom.xml
@@ -42,6 +42,9 @@
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <grammarEncoding>UTF-8</grammarEncoding>
+        </configuration>
       </plugin>
     </plugins>
   </build>
